@@ -19,22 +19,21 @@
 package org.apache.iceberg.rest;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.List;
 import java.util.Map;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableListMultimap;
+import org.apache.iceberg.relocated.com.google.common.collect.ImmutableMap;
 import org.apache.iceberg.rest.HTTPHeaders.HTTPHeader;
 import org.junit.jupiter.api.Test;
 
 class TestHTTPHeaders {
 
   final HTTPHeaders headers =
-      ImmutableHTTPHeaders.builder()
-          .addHeaders(
-              ImmutableHTTPHeader.builder().name("header1").addValues("value1a", "value1b").build(),
-              ImmutableHTTPHeader.builder().name("header2").addValues("value2").build())
-          .build();
+      HTTPHeaders.of(
+          HTTPHeader.of("header1", "value1a"),
+          HTTPHeader.of("header1", "value1b"),
+          HTTPHeader.of("header2", "value2"));
 
   @Test
   void asMap() {
@@ -66,32 +65,33 @@ class TestHTTPHeaders {
   }
 
   @Test
-  void allHeaderValues() {
-    assertThat(headers.allHeaderValues("header1")).containsExactly("value1a", "value1b");
-    assertThat(headers.allHeaderValues("header2")).containsExactly("value2");
-    assertThat(headers.allHeaderValues("header3")).isEmpty();
+  void headers() {
+    assertThat(headers.headers("header1"))
+        .containsExactly(HTTPHeader.of("header1", "value1a"), HTTPHeader.of("header1", "value1b"));
+    assertThat(headers.headers("HEADER1"))
+        .containsExactly(HTTPHeader.of("header1", "value1a"), HTTPHeader.of("header1", "value1b"));
+    assertThat(headers.headers("header2")).containsExactly(HTTPHeader.of("header2", "value2"));
+    assertThat(headers.headers("HEADER2")).containsExactly(HTTPHeader.of("header2", "value2"));
+    assertThat(headers.headers("header3")).isEmpty();
+    assertThat(headers.headers("HEADER3")).isEmpty();
   }
 
   @Test
-  void firstHeaderValue() {
-    assertThat(headers.firstHeaderValue("header1")).isEqualTo("value1a");
-    assertThat(headers.firstHeaderValue("header2")).isEqualTo("value2");
-    assertThat(headers.firstHeaderValue("header3")).isNull();
+  void contains() {
+    assertThat(headers.contains("header1")).isTrue();
+    assertThat(headers.contains("HEADER1")).isTrue();
+    assertThat(headers.contains("header2")).isTrue();
+    assertThat(headers.contains("HEADER2")).isTrue();
+    assertThat(headers.contains("header3")).isFalse();
+    assertThat(headers.contains("HEADER3")).isFalse();
   }
 
   @Test
-  void containsHeader() {
-    assertThat(headers.containsHeader("header1")).isTrue();
-    assertThat(headers.containsHeader("header2")).isTrue();
-    assertThat(headers.containsHeader("header3")).isFalse();
-  }
-
-  @Test
-  void addHeaderIfAbsent() {
-    HTTPHeaders actual = headers.addHeaderIfAbsent("HEADER1", "value1c");
+  void addIfAbsentHTTPHeader() {
+    HTTPHeaders actual = headers.addIfAbsent(HTTPHeader.of("HEADER1", "value1c"));
     assertThat(actual).isSameAs(headers);
 
-    actual = headers.addHeaderIfAbsent("header3", "value3");
+    actual = headers.addIfAbsent(HTTPHeader.of("header3", "value3"));
     assertThat(actual.asMap())
         .isEqualTo(
             Map.of(
@@ -101,55 +101,32 @@ class TestHTTPHeaders {
   }
 
   @Test
-  void addHeadersIfAbsent() {
-    HTTPHeaders actual = headers.addHeadersIfAbsent(HTTPHeaders.of("HEADER1", "value1c"));
+  void addIfAbsentHTTPHeaders() {
+    HTTPHeaders actual = headers.addIfAbsent(HTTPHeaders.of(HTTPHeader.of("HEADER1", "value1c")));
     assertThat(actual).isSameAs(headers);
 
     actual =
-        headers.addHeadersIfAbsent(
+        headers.addIfAbsent(
             ImmutableHTTPHeaders.builder()
                 .addHeader(HTTPHeader.of("HEADER1", "value1c"))
                 .addHeader(HTTPHeader.of("header3", "value3"))
                 .build());
-    assertThat(actual.asMap())
+    assertThat(actual)
         .isEqualTo(
-            Map.of(
-                "header1", List.of("value1a", "value1b"),
-                "header2", List.of("value2"),
-                "header3", List.of("value3")));
-  }
-
-  @Test
-  void addHeadersIfAbsentMap() {
-    HTTPHeaders actual = headers.addHeadersIfAbsent(Map.of("HEADER1", "value1c"));
-    assertThat(actual).isSameAs(headers);
-
-    HTTPHeaders newHeaders =
-        headers.addHeadersIfAbsent(Map.of("HEADER1", "value1c", "header3", "value3"));
-    assertThat(newHeaders.asMap())
-        .isEqualTo(
-            Map.of(
-                "header1", List.of("value1a", "value1b"),
-                "header2", List.of("value2"),
-                "header3", List.of("value3")));
-  }
-
-  @Test
-  void normalize() {
-    HTTPHeaders actual =
-        ImmutableHTTPHeaders.builder()
-            .addHeader(HTTPHeader.of("header1", "value1a"))
-            .addHeader(HTTPHeader.of("HEADER1", "value1b"))
-            .addHeader(HTTPHeader.of("header2", "value2"))
-            .build();
-    assertThat(actual.normalize()).isEqualTo(headers);
+            ImmutableHTTPHeaders.builder()
+                .addHeaders(
+                    HTTPHeader.of("header1", "value1a"),
+                    HTTPHeader.of("header1", "value1b"),
+                    HTTPHeader.of("header2", "value2"),
+                    HTTPHeader.of("header3", "value3"))
+                .build());
   }
 
   @Test
   void fromMap() {
     HTTPHeaders actual =
         HTTPHeaders.fromMap(
-            Map.of(
+            ImmutableMap.of(
                 "header1", List.of("value1a", "value1b"),
                 "header2", List.of("value2")));
     assertThat(actual).isEqualTo(headers);
@@ -159,12 +136,14 @@ class TestHTTPHeaders {
   void fromSimpleMap() {
     HTTPHeaders actual =
         HTTPHeaders.fromSimpleMap(
-            Map.of(
-                "header1", "value1a",
+            ImmutableMap.of(
+                "header1", "value1",
                 "header2", "value2"));
-    assertThat(actual.headers())
-        .containsExactlyInAnyOrder(
-            HTTPHeader.of("header1", "value1a"), HTTPHeader.of("header2", "value2"));
+    assertThat(actual)
+        .isEqualTo(
+            ImmutableHTTPHeaders.builder()
+                .addHeaders(HTTPHeader.of("header1", "value1"), HTTPHeader.of("header2", "value2"))
+                .build());
   }
 
   @Test
@@ -173,19 +152,9 @@ class TestHTTPHeaders {
         HTTPHeaders.fromMultiMap(
             ImmutableListMultimap.<String, String>builder()
                 .put("header1", "value1a")
-                .put("header1", "value1b")
                 .put("header2", "value2")
+                .put("header1", "value1b")
                 .build());
     assertThat(actual).isEqualTo(headers);
-  }
-
-  @Test
-  void invalidHeaders() {
-    assertThatThrownBy(() -> HTTPHeader.of("header1", List.of()))
-        .isInstanceOf(IllegalArgumentException.class)
-        .hasMessage("Header values cannot be empty");
-    assertThatThrownBy(() -> HTTPHeader.of("header1", " "))
-        .isInstanceOf(IllegalArgumentException.class)
-        .hasMessage("Header value cannot be blank");
   }
 }
